style: fix font contrast and sizing for how our platform operates section title

--- a/src/pages/event/Digital.css
+++ b/src/pages/event/Digital.css
@@ -866,19 +866,20 @@ background:#fefefe;
 
 .services-small{
 color:#597d1b;
-letter-spacing:3px;
-font-size:40px;
-margin-bottom:10px;
-font-weight:600;
+letter-spacing:2px;
+font-size:15px;
+margin-bottom:15px;
+font-weight:700;
+text-transform: uppercase;
 }
 
 /* BIG TITLE */
 
 .services-title{
-font-size:48px;
+font-size:42px;
 font-weight:700;
-margin-bottom:70px;
-color:#fff;
+margin-bottom:60px;
+color:#111;
 }
 
 /* CONTAINER */
